--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
       <header>
         <div class="header-ext">
           <nav class="menu">
-            <div class="logo box"><i class="fa-brands fa-discord"></i></div>
+            <div class="logo box">
+              <img src="./img/logo.svg" alt="logo">
+            </div>
             <div class="list box">
               <ul class="list-flex">
                 <li>Scarica</li>
@@ -119,7 +121,9 @@
             
             <ul class="inside" >
               <li>
-                <div class="logo box"><i class="fa-brands fa-discord"></i></div>
+                <div class="logo box">
+                  <img src="./img/logo.svg" alt="logo">
+                </div>
                 
               </li>
               <li class="purple button">Bottone</li>
